cupping coffee menu html,css

--- a/about/directions.html
+++ b/about/directions.html
@@ -1,6 +1,9 @@
+<!DOCTYPE HTML>
 <html>
   <head>
-    <title>Head First Lounge Directions</title>
+      <meta charset="UTF-8">
+      <title>Head First Lounge Directions</title>
+      <link type="text/css" rel="stylesheet" href="../css/lounge.css">
   </head>
   <body>
     <h1>Directions</h1>
