--- a/beverages/elixir.html
+++ b/beverages/elixir.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Head First Lounge Elixirs</title>
+    <link type="text/css" rel="stylesheet" href="../css/lounge.css">
   </head>
   <body>
     <h1>Our Elixirs</h1>
 
     <h2>Green Tea Cooler</h2>
-    <p>
+    <p class="greentea">
       <img src="../images/green.jpg" alt="green">
       Chock full of vitamins and minerals, this elixir
       combines the healthful benefits of green tea with
