--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h2 id="chai">Chai Tea, $1.85</h2>
     <p>A spicy drink made with black tea, spices, milk and honey.</p>
 
-    <p>Read about <a href="mission.html" title="Read more about Cupping Coffee's important mission">Our Mission</a></p>
+    <p>Read about <a href="about/mission.html" title="Read more about Cupping Coffee's important mission">Our Mission</a></p>
     <P>Read the <a target="_blank" href="http://wickedlysmart.com/buzz#Coffee" title="Read all about caffeine on the Buzz">Caffeine Buzz</a></P>
 
 </body>
