add Cupping Coffee css

--- a/about/Cupping Coffee.html
+++ b/about/Cupping Coffee.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Cupping Coffee</title>
+    <link type="text/css" rel="stylesheet" href="../css/Cupping Coffee.css">
 </head>
+
 <body>
+<div id="header">
+    <img src="../images/header.gif" alt="Cupping Coffee header image">
+</div>
+
+<div id="main">
     <h2>QUALITY COFFEE, QUALITY CAFFEINE</h2>
     <P>
         At Cupping Coffee, we are dedicated to filling all your caffeine needs through our quality coffees and teas. Sure,we want you to have a great cup pf coffee and a great coffee experience as well, but we're the only company that actively monitors and optimizes caffeine levels. So stop by and fill your cup, or order on line with our new Bean Machine online order form, and get that quality Cupping Coffee that you know will meet your caffeine standards.
@@ -29,6 +36,32 @@
     <p>
         We also offer a variety of coffee beans, whole or ground, for ou to take home with you. Order your coffee today using our one line <a>Bean Machine</a>, and take the Cupping Coffee experience home.
     </p>
+</div>
+<div id="sidebar">
+    <p class="beanheading">
+        <img src="../images/bag.gif" alt="Bean Machine bag">
+        <br>
+        ORDER ONLINE
+        with the
+        <a href="menu.html">Coffee CPN Cafe</a>
+        <br>
+        <span class="slogan">
+            FAST<br>
+            FRESH<br>
+            TO YOUR DOOR<br>
+        </span>
+    </p>
+    <p>
+        Why wait? You can order all our fine coffees right from the Internet with our new, automated Bean Machine. How does  it work? Just click on the Bean Machine link, enter your order, and behind the scenes, your coffee is roasted, ground (if you want),packaged, and shipped to your door.
+    </p>
+</div>
+
+<div id="footer">
+    &copy; 2012, Cupping Coffee
+    <br>
+    All trademarks and registered trademarks appearing on this site are the property of their respective owners.
+    </div>
+
 </body>
 </html>
 
