--- a/about/menu.html
+++ b/about/menu.html
@@ -6,7 +6,8 @@
     <link type="text/css" rel="stylesheet" href="../css/menu.css" >
 </head>
 <body>
-    <div id="content">
+    <div id="tableContainer">
+    <div id="tableRow1">
     <h1>咖品咖啡馆</h1>
     <h2>Coffee CPN Cafe</h2>
         <div>
@@ -237,7 +238,7 @@
         </table>
         </div>
 
-        <div>
+        <div id="tableRow2">
         <p>
             <br/>云南咖品商贸有限公司
             <br/>P：0871-68189178 / 86-13708840512
@@ -247,6 +248,7 @@
             <br/>1/f, TowerC, 17th Platform Jinding S&T Park, KM, Yunnan, China
         </p>
         </div>
+    </div>
     </div>
 </body>
 </html>
