--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             padding: 10px;
             font-family: sans-serif;
         }
+
+
     </style>
 </head>
 
 <body>
     <h1>Cupping Coffee Beverages</h1>
+    <p><a href="about/menu.html" title="Cupping Coffee Menu">Full Menu</a></p>
     <h2>House Blend,$1.49</h2>
     <p>A smooth, mild blend of coffees from Mexico, Bolivia and Guatemala.</p>
 
@@ -28,6 +31,7 @@
 
     <p>Read about <a href="about/mission.html" title="Read more about Cupping Coffee's important mission">Our Mission</a></p>
     <P>Read the <a target="_blank" href="http://wickedlysmart.com/buzz#Coffee" title="Read all about caffeine on the Buzz">Caffeine Buzz</a></P>
+
 
 </body>
 </html>
