--- a/about/lounge.html
+++ b/about/lounge.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>Head First Lounge</title>
-    <link type="text/css" rel="stylesheet" href="css/lounge.css" media="screen">
-    <link type="text/css" rel="stylesheet" href="css/lounge-mobile.css" media="screen and (max-width: 480px)">
-    <link type="text/css" rel="stylesheet" href="css/lounge-print.css" media="print">
+    <link type="text/css" rel="stylesheet" href="../css/lounge.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="../css/lounge-mobile.css" media="screen and (max-width: 480px)">
+    <link type="text/css" rel="stylesheet" href="../css/lounge-print.css" media="print">
 
 </head>
 <body>
-<p><img src="images/logo.gif" alt="Head First Lounge"></p>
+<p><img src="../images/logo.gif" alt="Head First Lounge"></p>
 <div id="elixirs">
     <h2>Weekly Elixir Specials</h2>
     <p>
-        <img src="images/yellow.gif" alt="Lemon Breeze Elixir">
+        <img src="../images/yellow.gif" alt="Lemon Breeze Elixir">
     </p>
     <h3>Lemon Breeze</h3>
     <p>
@@ -25,7 +25,7 @@
     </p>
 
     <p>
-        <img src="images/chai.gif" alt="Chai Chiller Elixir">
+        <img src="../images/chai.gif" alt="Chai Chiller Elixir">
     </p>
     <h3>Chai Chiller</h3>
     <p>
@@ -35,7 +35,7 @@
     </p>
 
     <p>
-        <img src="images/black.gif" alt="Black Brain Brew Elixir">
+        <img src="../images/black.gif" alt="Black Brain Brew Elixir">
     </p>
     <h3>Black Brain Brew</h3>
     <p>
@@ -47,7 +47,7 @@
     <p>
         Join us any evening for these and all our
         other wonderful
-        <a href="beverages/elixir.html"
+        <a href="../beverages/elixir.html"
            title="Head First Lounge Elixirs">elixirs</a>.
     </p>
 </div>
@@ -92,7 +92,7 @@
     Now that you've experienced the lounge <em>virtually</em>, isn't
     it time to check us out <em>for real</em>? We're located right
     in the heart of Webville, and we've created some
-    <a href="about/directions.html"
+    <a href="directions.html"
        title="Detailed Directions to the Lounge">detailed directions</a>
     to get you here in record time. No reservations necessary;
     come and join us anytime.
