add Cupping Coffee header background pictures

--- a/about/menu.html
+++ b/about/menu.html
@@ -6,11 +6,19 @@
     <link type="text/css" rel="stylesheet" href="../css/menu.css" >
 </head>
 <body>
+<div id="header">
+
+    <a><img src="../images/coffeeHeader.jpg" alt="coffee menu" width=365 height="260"></a>
+    <a><img src="../images/coffeeHeader2.jpg" alt="coffee menu" width=365 height="260"></a>
+    <a><img src="../images/coffeeHeader3.jpg" alt="coffee menu" width=365 height="260"></a>
+    <a><img src="../images/coffeeHeader.gif" alt="coffee menu" width=365 height="260"></a>
+</div>
+
     <div id="tableContainer">
     <div id="tableRow1">
     <h1>咖品咖啡馆</h1>
     <h2>Coffee CPN Cafe</h2>
-        <div>
+        <div id="main">
             <table>
                <tr class="kinds">
                    <th class="beans">经典咖啡</th>
@@ -71,7 +79,7 @@
             </table>
         </div>
 
-        <div>
+        <div id="tableRow">
             <table>
                 <tr class="kinds">
                     <th class="beans">精品咖啡</th>
