add Cupping Coffee header background pictures

--- a/about/menu.html
+++ b/about/menu.html
@@ -84,7 +84,7 @@
                 <tr class="kinds">
                     <th class="beans">精品咖啡</th>
                     <th class="taste">口感</th>
-                    <th class="flavor">>风味描述</th>
+                    <th class="flavor">风味描述</th>
                     <th class="cooking">冲泡方式</th>
                     <th class="tips">饮用建议</th>
                     <th class="price">单价</th>
