re-edit index.html.(to homepage of sort)

--- a/index.html
+++ b/index.html
@@ -5,32 +5,45 @@
     <title>Cupping Coffee</title>
     <style>
         body{
-            background-color: #d2b48c;
-            margin-left: 20%;
-            margin-right: 20%;
-            border: 2px dotted black;
-            padding: 10px;
+            background-color: blanchedalmond;
+            width:auto;
+            text-align: center;
+            border: 2px dotted white;
+            padding: 50px;
             font-family: sans-serif;
+            color:saddlebrown;
+        }
+        #orderMenu{
+            font-size:large;
+            font-weight: bold;
+            font-height: 20px;
         }
 
-
     </style>
+
 </head>
 
 <body>
-    <h1>Cupping Coffee Beverages</h1>
-    <p><a href="about/menu.html" title="Cupping Coffee Menu">Full Menu</a></p>
-    <h2>House Blend,$1.49</h2>
-    <p>A smooth, mild blend of coffees from Mexico, Bolivia and Guatemala.</p>
+            <h1>Cupping Coffee Beverages</h1>
+            <p id="orderMenu">
+                <a href="about/menu.html" title="Cupping Coffee Menu">MENU</a>
+                <a href="about/lounge.html" title="Cupping Lounge">LOUNGE</a>
+                <a href="about/Cupping Coffee.html" title="Cupping Coffee Features">CUPPING COFFEE</a>
+            </p>
+            </p>
+            <h2>House Blend,$1.49</h2>
+            <p>A smooth, mild blend of coffees from Mexico, Bolivia and Guatemala.</p>
 
-    <h2>Mocha Caffe Latte, $2.35</h2>
-    <p>Espresso, steamed milk and chocolate syrup.</p>
+            <h2>Mocha Caffe Latte, $2.35</h2>
+            <p>Espresso, steamed milk and chocolate syrup.</p>
 
-    <h2 id="chai">Chai Tea, $1.85</h2>
-    <p>A spicy drink made with black tea, spices, milk and honey.</p>
+            <h2 id="chai">Chai Tea, $1.85</h2>
+            <p>A spicy drink made with black tea, spices, milk and honey.</p>
 
-    <p>Read about <a href="about/mission.html" title="Read more about Cupping Coffee's important mission">Our Mission</a></p>
-    <P>Read the <a target="_blank" href="http://wickedlysmart.com/buzz#Coffee" title="Read all about caffeine on the Buzz">Caffeine Buzz</a></P>
+            <p>Read about <a href="about/mission.html" title="Read more about Cupping Coffee's important mission">Our Mission</a></p>
+            <P>Read the <a target="_blank" href="http://wickedlysmart.com/buzz#Coffee" title="Read all about caffeine on the Buzz">Caffeine Buzz</a></P>
+
+
 
 
 </body>
