--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
             font-family: sans-serif;
             color:saddlebrown;
         }
+
         #orderMenu{
             font-size:large;
             font-weight: bold;
-            font-height: 20px;
+            padding:10px;
+            background-color: white;
+
+        }
+
+        #header{
+            font-size: larger;
+            font-weight: bolder;
+            padding:40px;
+            background:brown url("images/background2.gif");
+        }
+
+        #examples{
+            background:brown url("images/background2.gif");
         }
 
     </style>
@@ -24,13 +38,16 @@
 </head>
 
 <body>
-            <h1>Cupping Coffee Beverages</h1>
+    <div id="header">
+        <h1>Cupping Coffee Beverages</h1>
+    </div>
+
             <p id="orderMenu">
                 <a href="about/menu.html" title="Cupping Coffee Menu">MENU</a>
                 <a href="about/lounge.html" title="Cupping Lounge">LOUNGE</a>
                 <a href="about/Cupping Coffee.html" title="Cupping Coffee Features">CUPPING COFFEE</a>
             </p>
-            </p>
+            <div id="examples">
             <h2>House Blend,$1.49</h2>
             <p>A smooth, mild blend of coffees from Mexico, Bolivia and Guatemala.</p>
 
@@ -42,7 +59,7 @@
 
             <p>Read about <a href="about/mission.html" title="Read more about Cupping Coffee's important mission">Our Mission</a></p>
             <P>Read the <a target="_blank" href="http://wickedlysmart.com/buzz#Coffee" title="Read all about caffeine on the Buzz">Caffeine Buzz</a></P>
-
+            </div>
 
 
 
