--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             font-size:large;
             font-weight: bold;
             padding:10px;
-            background-color: papayawhip;
+            background-color: white;
 
         }
 
