--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <style>
         body{
             background-color: blanchedalmond;
-            width:auto;
+            margin: 50px;
             text-align: center;
             border: 2px dotted white;
-            padding: 50px;
+            padding: 15px;
             font-family: sans-serif;
             color:saddlebrown;
         }
@@ -31,6 +31,7 @@
 
         #examples{
             background:brown url("images/background2.gif");
+            padding:5px;
         }
 
     </style>
