add some style elements to homepage

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <style>
         body{
             background-color: blanchedalmond;
-            margin: 50px;
+            margin: 40px;
             text-align: center;
-            border: 2px dotted white;
-            padding: 15px;
+            border: 2px dashed white;
+            padding: 40px;
             font-family: sans-serif;
             color:saddlebrown;
         }
